# opencv-study

./: .gitignore  README.md
c++/HelloCv/: main.cpp
c++/slideshow/: CMakeLists.txt  main.cpp
python/HelloCV/: HelloCV.py
python/matplotlib/: matplot.py
python/slideshow/: slideshow.py
